--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap');
 
-* {
+*, figure {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -12,25 +12,38 @@ body {
     background-color: hsl(233, 47%, 7%);
     font-size: 1rem;
     font-family: 'Inter', sans-serif;
-    display: flex;
-    justify-content: center;
+}
+
+body, .grid-2 {
     align-items: center;
 }
 
 main {
     background-color: hsl(244, 38%, 16%);
-    max-width: 75%;
+    max-width: 70%;
     border-radius: 0.5em;
+    overflow: hidden;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 1fr;
+    grid-template-columns: 1.2fr 1fr;
+    grid-template-rows: 0.8fr;
 }
 
 .grid-1 { grid-area: 1 / 1 / 2 / 2; }
 .grid-2 { grid-area: 1 / 2 / 2 / 3; }
 
 .container {
-    padding: 3rem;
+    padding:  4rem 3rem;
+    flex-direction: column;
+    width: 90%;
+}
+
+body, .container, .grid-2 {
+    display: flex;
+
+}
+
+body, .container {
+    justify-content: center;
 }
 
 h1 {
@@ -42,7 +55,7 @@ p {
 }
 
 h4 + p {
-    font-size: 0.8rem;
+    font-size: 0.6rem;
 }
 
 body,
@@ -61,15 +74,20 @@ body,
     width: 90%;
     display: flex;
     justify-content: space-between;
-    padding: 2rem 0;
+    padding: 3rem 0 0;
 }
 
 .grid-2 {
-    object-fit: contain;
+    background-color: hsl(277, 64%, 61%);
 }
 
 img {
     width: 100%;
+    height: 100%;
+    object-fit: cover;
+    mix-blend-mode: multiply;
+    opacity: 70%;
+    
 }
 
 .attribution {
