--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap');
 
-*, figure {
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -20,24 +20,21 @@ body, .grid-2 {
 
 main {
     background-color: hsl(244, 38%, 16%);
-    max-width: 70%;
+    max-width: 950px;
+
     border-radius: 0.5em;
     overflow: hidden;
-    display: grid;
-    grid-template-columns: 1.2fr 1fr;
-    grid-template-rows: 0.8fr;
-}
 
-.grid-1 { grid-area: 1 / 1 / 2 / 2; }
-.grid-2 { grid-area: 1 / 2 / 2 / 3; }
+    flex-direction: row;
+}
 
 .container {
     padding:  4rem 3rem;
     flex-direction: column;
-    width: 90%;
+    width: 50%;
 }
 
-body, .container, .grid-2 {
+body, main, .container, .grid-2 {
     display: flex;
 
 }
@@ -97,3 +94,24 @@ img {
 .attribution a {
     color: hsl(228, 45%, 44%);
 }
+
+@media screen and (min-width: 960px) {
+    main, .container {
+        width: 70%;
+    }
+}
+
+@media screen and (min-width: 720px) and (max-width: 960px) {
+    main, .container {
+        width: 80%;
+    }
+}
+
+@media screen and (max-width: 720px) {
+    main {
+        width: 90%;
+        display: flex;
+        flex-direction: column-reverse;
+    }
+}
+
