--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,6 @@
 }
 
 body {
-    width: 100%;
     height: 100vh;
     background-color: hsl(233, 47%, 7%);
     font-size: 1rem;
@@ -16,6 +15,10 @@ body {
 
 body, .grid-2 {
     align-items: center;
+}
+
+body, img {
+    width: 100%;
 }
 
 main {
@@ -34,7 +37,7 @@ main {
     width: 50%;
 }
 
-body, main, .container, .grid-2, .stats {
+body, main, .container, .grid-1, .grid-2, .stats {
     display: flex;
 
 }
@@ -74,6 +77,7 @@ body, h4 {
 
 .stats {
     width: 90%;
+    flex-direction: row;
     justify-content: space-between;
     padding: 3rem 0 0;
 }
@@ -88,7 +92,6 @@ body, h4 {
 }
 
 img {
-    width: 100%;
     height: 100%;
     object-fit: cover;
     mix-blend-mode: multiply;
@@ -113,7 +116,7 @@ img {
     }
 }
 
-@media screen and (min-width: 820px) and (max-width: 960px) {
+@media screen and (min-width: 820px) and (max-width: 960px), (min-width: 500px) and (max-height: 700px) {
     main, .container {
         width: 80%;
     }
@@ -124,7 +127,19 @@ img {
     
 }
 
-@media screen and (max-width: 820px) and (min-height: 700px) {
+/*@media screen and (min-width: 500px) and (max-width: 800px) and (min-height: 500px) and (max-height: 800px) {
+    body {
+        width: 100%;
+        height: 100vw;
+    }
+    
+    main {
+        width: 80%;
+        flex-direction: row-reverse;
+    }
+}*/
+
+@media screen and (max-width: 820px) and (min-height: 700px), (max-width: 650px) and (max-height: 700px) {
     * {
         margin: 0;
         padding: 0;
@@ -182,7 +197,7 @@ img {
     }
 }
 
-@media screen and (max-width: 460px) and (min-height: 600px), (min-width: 200px) and (max-height: 800px) {
+@media screen and (max-width: 460px) and (min-height: 600px) {
     body {
         width: 100%;
     }
