--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ body, img {
 
 main {
     background-color: hsl(244, 38%, 16%);
-    max-width: 950px;
+    max-width: 70%;
 
     border-radius: 0.5em;
     overflow: hidden;
@@ -47,8 +47,11 @@ body, .container {
 }
 
 h1 {
-    padding: 0 0 1.5rem;
     line-height: 1.2;
+}
+
+h1 + p {
+    margin: 0.7rem 0;
 }
 
 p {
@@ -79,7 +82,6 @@ body, h4 {
     width: 90%;
     flex-direction: row;
     justify-content: space-between;
-    padding: 3rem 0 0;
 }
 
 .stat-numbers {
@@ -116,9 +118,38 @@ img {
     }
 }
 
-@media screen and (min-width: 820px) and (max-width: 960px), (min-width: 500px) and (max-height: 700px) {
-    main, .container {
-        width: 80%;
+@media screen and (min-width: 820px) and (max-width: 960px), (min-width: 500px) and (max-height: 700px), (min-width: 500px) and (max-height: 500px) {
+    main {
+        width: 70%;
+        max-height: 85%;
+    }
+
+    h1 {
+        font-size: 1.5rem;
+    }
+
+    h1 + p {
+        font-size: 0.8rem;
+    }
+
+    .container {
+        width: 60%;
+        max-height: 60%;
+        padding: 2rem 1.5rem;
+    }
+
+    .stats {
+        width: 100%;
+        padding: 1rem 0 0.5rem;
+        justify-content: space-between;
+    }
+
+    .stat-numbers {
+        padding-right: 1rem;
+    }
+
+    h4 {
+        font-size: 1.3rem;
     }
 
     .img-mobile {
@@ -126,18 +157,6 @@ img {
     }
     
 }
-
-/*@media screen and (min-width: 500px) and (max-width: 800px) and (min-height: 500px) and (max-height: 800px) {
-    body {
-        width: 100%;
-        height: 100vw;
-    }
-    
-    main {
-        width: 80%;
-        flex-direction: row-reverse;
-    }
-}*/
 
 @media screen and (max-width: 820px) and (min-height: 700px), (max-width: 650px) and (max-height: 700px) {
     * {
@@ -147,25 +166,29 @@ img {
     
     body {
         text-align: center;
-        max-height: 60%;
     }
     
     main {
         width: 80%;
+        max-height: 90%;
         display: flex;
         flex-direction: column-reverse;
     }
     
-    h1, h4 {
-        font-size: 1.8rem;
+    .container {
+        max-height: 60%;
     }
+
+    h1 {
+        font-size: 1.5rem;
+    }
+
     
     h1 + p {
-        font-size: 1.2rem;
+        font-size: 1rem;
     }
     
     img {
-        width: 100%;
         object-fit: cover;
     }
     
@@ -179,11 +202,11 @@ img {
     
     .stat-numbers {
         font-size: 0.7rem;
-        padding: 0 0 1rem;
+        margin: 0.2rem 0;
     }
     
     .grid-1 {
-        padding: 2.6rem 3rem 0.5rem;
+        padding: 2rem 1.5rem 0.5rem;
         justify-content: center;
     }
     
@@ -198,16 +221,63 @@ img {
 }
 
 @media screen and (max-width: 460px) and (min-height: 600px) {
-    body {
-        width: 100%;
+    main {
+        width: 90%;
+        max-height: 90%;
+    }
+
+    h1 {
+        font-size: 1.4rem;
+    }
+
+    h1 + p {
+        font-size: 1rem;
+    }
+
+    h4 {
+        font-size: 1.2rem;
+    }
+
+    .container {
+        max-height: 60%;
+    }
+
+    .grid-1 {
+        padding: 1.5rem 1rem 0.5rem;
+    }
+
+}
+
+@media screen and (min-width: 200px) and (max-width: 360px) {
+    main {
+        max-height: 90%;
+    }
+
+    .container {
+        height: 60%;
+        max-height: 60%;
+        padding: 1rem;
     }
 
     .stats {
         flex-direction: column;
-        padding: 1.65rem 0 0;
+
     }
 
-    .grid-1 {
-        padding: 2.6rem 2rem 0.5rem;
+    h1 {
+        font-size: 1.2rem;
+        margin: 0.8rem 0 0;
+    }
+
+    h1 + p {
+        font-size: 0.8rem;
+    }
+
+    h4 {
+        font-size: 0.9rem;
+    }
+
+    .stat-numbers {
+        margin: 0 0 0.8rem;
     }
 }
