--- a/css/styles.css
+++ b/css/styles.css
@@ -24,10 +24,8 @@ body, img {
 main {
     background-color: hsl(244, 38%, 16%);
     max-width: 70%;
-
     border-radius: 0.5em;
     overflow: hidden;
-
     flex-direction: row;
 }
 
@@ -37,7 +35,7 @@ main {
     width: 50%;
 }
 
-body, main, .container, .grid-1, .grid-2, .stats, .attribution {
+body, main, .container, .grid-1, .grid-2, .stats {
     display: flex;
 
 }
@@ -51,7 +49,7 @@ h1 {
 }
 
 h1 + p {
-    margin: 2rem 0;
+    margin: 1.5rem 0;
 }
 
 p {
@@ -94,7 +92,7 @@ body, h4 {
 }
 
 img {
-    width: 100%;
+    height: 100%;
     object-fit: cover;
     mix-blend-mode: multiply;
     opacity: 70%;
@@ -117,6 +115,7 @@ img {
 }
 
 @media screen and (min-width: 820px) and (max-width: 960px), (min-width: 500px) and (max-height: 700px), (min-width: 500px) and (max-height: 500px) {
+
     main {
         width: 70%;
         max-height: 85%;
@@ -133,16 +132,21 @@ img {
     .container {
         width: 70%;
         max-height: 60%;
-        padding: 2rem;
+        padding: 2rem 1rem;
     }
 
     .stats {
         width: 90%;
         justify-content: space-between;
+        margin: 0.5rem;
     }
 
     h4 {
-        font-size: 1.3rem;
+        font-size: 1rem;
+    }
+
+    h4 + p {
+        margin: 0 0.7rem 0 0;
     }
 
     .img-mobile {
